--- a/composer.json
+++ b/composer.json
@@ -27,10 +27,11 @@
         "overtrue/pinyin": "^4.0",
         "dragonmantank/cron-expression": "^2.3",
         "topthink/think-multi-app": "^1.0",
-        "overtrue/wechat": "~4.2",
+        "overtrue/wechat": "~5.0",
         "endroid/qr-code": "^1.9",
         "phpmailer/phpmailer": "~6.1",
-        "phpoffice/phpspreadsheet": "^1.13"
+        "phpoffice/phpspreadsheet": "^1.13",
+        "guzzlehttp/guzzle": "~6.0"
     },
     "require-dev": {
         "symfony/var-dumper": "^4.2"
