--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "endroid/qr-code": "^1.9",
         "phpmailer/phpmailer": "~6.1",
         "phpoffice/phpspreadsheet": "^1.13",
-        "elasticsearch/elasticsearch": "^7.0"
+        "elasticsearch/elasticsearch": "^7.0",
+        "guzzlehttp/guzzle": "^6.0"
     },
     "require-dev": {
         "symfony/var-dumper": "^4.2"
